@@ -62,8 +62,6 @@ SUCH DAMAGE.
 <a name="intro"></a>
 <h3>Introduction:</h3>
 
-<p>[Note: This is a <a href="guestoses.html#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
-
 <p>This page contains information about the <a 
 href="http://en.wikipedia.org/wiki/Dreamcast">Dreamcast</a> emulation mode 
 in GXemul. It's not a very long page, but I thought it would be best to 
