@@ -46,7 +46,6 @@ SUCH DAMAGE.
 <p><br>
 <ul>
   <li><a href="#generalnotes">General notes on running "guest OSes"</a>
-  <li><a href="#legacy">Legacy emulation modes</a>
   <li><a href="#netbsdpmaxinstall">NetBSD/pmax 7.1.1</a>
   <li><a href="#netbsdarcinstall">NetBSD/arc 5.0.1</a>
   <li><a href="#netbsdhpcmipsinstall">NetBSD/hpcmips 5.0.2</a>
@@ -72,8 +71,6 @@ SUCH DAMAGE.
   <li><a href="#sprite">Sprite for DECstation</a>
   <li><a href="#declinux">Debian GNU/Linux for DECstation</a>
 </ul>
-
-
 
 
 
@@ -127,26 +124,10 @@ a real disk.
 <p><b>Unsupported guest operating systems, or experimental install instructions:</b>
 
 <p>In addition to the "working" guest operating systems listed above,
-you might find the following information interesting:
-
-<ul>
-  <li><a href="unsupported.html#mach">Mach/PMAX</a>
-  <li><a href="unsupported.html#declinuxredhat">Redhat Linux for DECstation</a>
-  <li><a href="unsupported.html#openbsdsgiinstall">OpenBSD/sgi</a>
-  <li><a href="unsupported.html#openbsdarcinstall">OpenBSD/arc 2.3</a>
-  <li><a href="unsupported.html#debiancats">Debian GNU/Linux for CATS</a>
-  <li><a href="unsupported.html#linux_malta">Linux/Malta</a> (variant 1)
-  <li><a href="unsupported.html#linux_malta2">Linux/Malta</a> (variant 2)
-  <li><a href="unsupported.html#linux_qemu_mips">Linux/QEMU_MIPS</a>
-  <li><a href="unsupported.html#windows_nt_mips">Windows NT/MIPS</a>
-  <li><a href="unsupported.html#netbsdplaystation2">NetBSD/playstation2</a>
-</ul>
-
-<p><b><font color="#ff0000">NOTE:</b>
-Some of these sections may not be relevant to this
-specific release of GXemul,</font> for example some of these
-modes may be legacy modes that worked before but not any longer,
-or are not yet working but could be in the future.
+there is a page about <a href="unsupported.html">unsupported modes or guest operating
+systems</a>, which you may find interesting. These are either mode that are
+not-yet-working, or modes that did work at some point in time but are now
+broken.
 
 
 <p><b>Version numbers:</b>
@@ -172,31 +153,8 @@ NetBSD/prep). The reasons for this is usually one of the following:
 
 
 <p><br>
-<a name="legacy"></a>
-<h3>Legacy emulation modes</h3>
-
-Most of the emulation modes in GXemul have not yet been rewritten to use the
-<a href="framework.html">new 0.6.x framework</a>. These modes will still run,
-and are officially supported in the sense that they should work. However, since
-they do not use the new framework, they will not be developed further.
-
-<p>The long term goal is to rewrite as many of the legacy machines as possible
-into new implementations (using the new framework), but this will take time.
-Modes that cannot be rewritten for some reason (e.g. amount of work required
-is too large) will need to be removed sooner or later.
-
-<p>Modes that use the pre-0.6 framework are therefore marked
-<font color="#dd2222"><b>LEGACY MODE</b></font>.
-
-
-
-
-
-<p><br>
 <a name="netbsdpmaxinstall"></a>
 <h3>NetBSD/pmax:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p><a href="http://www.netbsd.org/ports/pmax/">NetBSD/pmax</a> was the
 first guest OS that could be
@@ -255,8 +213,6 @@ root unless you also set a root password.
 <a name="netbsdarcinstall"></a>
 <h3>NetBSD/arc:</h3>
 
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
-
 <p>It is possible to install and run <a href="http://www.netbsd.org/ports/arc/">NetBSD/arc</a>
 on an emulated Acer PICA-61 in the emulator.
 
@@ -309,8 +265,6 @@ image, using the following command:<pre>
 <p><br>
 <a name="netbsdhpcmipsinstall"></a>
 <h3>NetBSD/hpcmips:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p>It is possible to install <a
 href="http://www.netbsd.org/ports/hpcmips/">NetBSD/hpcmips</a> onto a disk
@@ -381,8 +335,6 @@ is available. This makes it a bit akward to use X.
 <a name="netbsdcobaltinstall"></a>
 <h3>NetBSD/cobalt:</h3>
 
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
-
 <p><a href="http://www.netbsd.org/ports/cobalt/">NetBSD/cobalt</a> is possible
 to install on an emulated Cobalt Cube.
 
@@ -428,8 +380,6 @@ You should now be able to boot NetBSD/cobalt like this:<pre>
 <p><br>
 <a name="netbsdevbmipsinstall"></a>
 <h3>NetBSD/evbmips:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p><a href="http://www.netbsd.org/ports/evbmips/">NetBSD/evbmips</a> can run 
 in GXemul on an emulated Malta evaluation board, with a 5Kc (MIPS64) or 
@@ -524,8 +474,6 @@ generic kernel:<pre>
 <a name="netbsdalgorinstall"></a>
 <h3>NetBSD/algor:</h3>
 
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
-
 <p><a href="http://www.netbsd.org/ports/algor/">NetBSD/algor</a> can
 run in GXemul on an emulated Algorithmics P5064 evaluation board.
 
@@ -613,8 +561,6 @@ generic kernel:<pre>
 <p><br>
 <a name="netbsdsgimips"></a>
 <h3>NetBSD/sgimips:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -804,8 +750,6 @@ to IPv4.
 <a name="netbsdcatsinstall"></a>
 <h3>NetBSD/cats:</h3>
 
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
-
 <p>It is possible to install and run
 <a href="http://www.netbsd.org/ports/cats/">NetBSD/cats</a> in GXemul.
 
@@ -859,8 +803,6 @@ Use the following command line to boot the emulated CATS machine:<pre>
 <p><br>
 <a name="netbsdevbarminstall"></a>
 <h3>NetBSD/evbarm:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p><a href="http://www.netbsd.org/ports/evbarm/">NetBSD/evbarm</a> can
 run in GXemul on an emulated IQ80321 evaluation board.
@@ -929,8 +871,6 @@ cd /; umount /mnt; umount /mnt2; sync; halt</b>
 <p><br>
 <a name="netbsdnetwinderinstall"></a>
 <h3>NetBSD/netwinder:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p>It is possible to run <a 
 href="http://www.netbsd.org/ports/netwinder/">NetBSD/netwinder</a>
@@ -1028,8 +968,6 @@ generic kernel:<pre>
 <p><br>
 <a name="netbsdprepinstall"></a>
 <h3>NetBSD/prep:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p>It is possible to install and run <a 
 href="http://www.netbsd.org/ports/prep/">NetBSD/prep</a> 2.1 in GXemul on 
@@ -1132,8 +1070,6 @@ system type, and init path.
 <a name="netbsdmacppcinstall"></a>
 <h3>NetBSD/macppc:</h3>
 
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
-
 <p>It is possible to install and run <a 
 href="http://www.netbsd.org/ports/macppc/">NetBSD/macppc</a> in GXemul on 
 an emulated generic PowerPC machine. No specific Machintosh model is 
@@ -1188,8 +1124,6 @@ the disk image.
 <p><br>
 <a name="netbsdpmppc"></a>
 <h3>NetBSD/pmppc:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p><a href="http://www.netbsd.org/ports/pmppc/">NetBSD/pmppc</a> can 
 run in GXemul on an emulated Artesyn PM/PPC board. Currently, no SCSI or other
@@ -1335,7 +1269,6 @@ the following values:<pre>
 <a name="netbsdlandiskinstall"></a>
 <h3>NetBSD/landisk:</h3>
 
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p><a href="http://www.netbsd.org/ports/landisk/">NetBSD/landisk</a> can
 run in GXemul.
@@ -1427,8 +1360,6 @@ Moved <a href="dreamcast.html#netbsd_generic_md">here</a>.
 <p><br>
 <a name="openbsdpmaxinstall"></a>
 <h3>OpenBSD/pmax:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p>Installing <a href="http://www.openbsd.org/pmax.html">OpenBSD/pmax</a> is
 a bit harder than installing NetBSD/pmax. You should first read the <a
@@ -1576,8 +1507,6 @@ enter <b><tt>rcons</tt></b> if you are using the graphical framebuffer,
 <a name="openbsdcatsinstall"></a>
 <h3>OpenBSD/cats:</h3>
 
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
-
 <p>It is possible to install and run
 <a href="http://www.openbsd.org/cats.html">OpenBSD/cats</a>
 in GXemul. Unfortunately, "The OpenBSD/cats port has been discontinued 
@@ -1650,8 +1579,6 @@ boot from the harddisk image:
 <p><br>
 <a name="openbsdlandiskinstall"></a>
 <h3>OpenBSD/landisk:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p>It is possible to install and run
 <a href="http://www.openbsd.org/landisk.html">OpenBSD/landisk</a>
@@ -1738,8 +1665,6 @@ landisk machine, see
 <p><br>
 <a name="openbsdmvme88kinstall"></a>
 <h3>OpenBSD/mvme88k:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p>It is possible to run <a href="http://www.openbsd.org/mvme88k.html">OpenBSD/mvme88k</a>
 on an emulated Motorola MVME187 machine in the emulator.
@@ -1975,8 +1900,6 @@ from within the guest OS.
 <a name="helenos"></a>
 <h3>HelenOS:</h3>
 
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
-
 <p><a href="http://www.helenos.org/">HelenOS</a> can run in GXemul's
 <tt>testarm</tt> and <tt>oldtestmips</tt> machine modes.
 
@@ -2018,8 +1941,6 @@ command line shell, or F12 + Enter to enter the kernel console.
 <p><br>
 <a name="ultrixinstall"></a>
 <h3>Ultrix/RISC:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p>Ultrix 4.x can run in GXemul on an emulated DECstation 5000/200.
 (Ultrix was the native OS for these machines, but
@@ -2121,8 +2042,6 @@ that file as a disk image file in the emulator.
 <a name="sprite"></a>
 <h3>Sprite for DECstation:</h3>
 
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
-
 <p>Sprite was a research operating system at the University of Berkeley.
 A copy of a Sprite harddisk image for a DECstation 5000/200 is still
 available. If you want to find out more about Sprite in general, read
@@ -2184,8 +2103,6 @@ start the X11 environment.
 <p><br>
 <a name="declinux"></a>
 <h3>Debian GNU/Linux for DECstation:</h3>
-
-<p>[Note: This is a <a href="#legacy"><font color="#dd2222"><b>LEGACY MODE</b></font></a>.]
 
 <p>It is possible to run Debian GNU/Linux for DECstation in the emulator,
 on an emulated 5000/200 ("3max"). However, just choosing any 
