@@ -75,7 +75,6 @@ SUCH DAMAGE.
   <li><a href="guestoses.html">Installing and running "guest OSes"</a>
   <ul>
     <li><a href="guestoses.html#generalnotes">General notes on running "guest OSes"</a>
-    <li><a href="guestoses.html#legacy">Legacy emulation modes</a>
     <li><a href="guestoses.html#netbsdpmaxinstall">NetBSD/pmax</a>
     <li><a href="guestoses.html#netbsdarcinstall">NetBSD/arc</a>
     <li><a href="guestoses.html#netbsdhpcmipsinstall">NetBSD/hpcmips</a>
