@@ -69,9 +69,6 @@ page</a>.
 cases, it contains notes about starting guest OSes that are not complete
 (i.e. just booting a kernel, not a full installation of a guest OS).
 
-<p>Also note that ALL modes on this page are
-<a href="guestoses.html#legacy"><font color="#dd2222"><b>legacy modes</b></font></a>.
-
 
 <p><hr>
 
